--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,19 +1,9 @@
 instructors:
-  - name: Albus Dumbledore
-    profile_pic: /_images/pp/dumbledore.jpg
-    webpage: https://en.wikipedia.org/wiki/Albus_Dumbledore
-  - name: Minerva McGonagall
-    profile_pic: /_images/pp/mcgonagall.jpg
+  - name: Dip Sankar Banerjee
+    profile_pic: /_images/pp/dsb.jpg
+    webpage: https://sites.google.com/site/dipsankarban/
 
 teaching_assistants:
-  - name: Harry Potter
+  - name: Shashikant Prasad
     profile_pic: /_images/pp/potter.jpg
-    webpage: https://en.wikipedia.org/wiki/Harry_Potter_(character)
-
-  - name: Hermione Granger
-    profile_pic: /_images/pp/granger.jpg
-    webpage: https://en.wikipedia.org/wiki/Hermione_Granger
-
-  - name: Ron Weasley
-    profile_pic: /_images/pp/weasley.jpg
-    webpage: https://en.wikipedia.org/wiki/Ron_Weasley
+    
