--- a/_data/previous_offering.yml
+++ b/_data/previous_offering.yml
@@ -1,7 +1,4 @@
 offerings:
-  - title: Fall 1997
-    url: https://previous_course_website.url/
-  
-  - title: Fall 1996
-    url: https://previous_course_website.url/
+  - title: Trimester-III 2021
+    url: https://dipsankarb.github.io/wi22-csl7070/
 
