--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ address: |
 ### Do not change the followings unless you know what you are doing ###
 
 # Build settings
-markdown: GFM
+markdown: kramdown
 
 # Other options
 permalink: blog/:year/:month/:title
