--- a/_data/people.yml
+++ b/_data/people.yml
@@ -5,5 +5,5 @@ instructors:
 
 teaching_assistants:
   - name: Shashikant Prasad
-    profile_pic: /_images/pp/potter.jpg
+    profile_pic: /_images/pp/per-ico.png
     
