--- a/_data/late_policy.yml
+++ b/_data/late_policy.yml
@@ -1,3 +1,3 @@
 policies:
-  - You no late days. Assignment needs to be submitted within due date.
+  - You have no late days. Assignment needs to be submitted within due date.
   
