--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "http://dipsankarb.github.io/" # the base hostname & protocol for your site
 schoolname: "Department of CSE, IIT Jodhpur"
 schoolurl: "https://cse.iitj.ac.in"
 twitter_username: dipsankarb 
+email: dipsankarb[YOU-KNOW-WHAT]iitj.ac.in
 
 address: |
     Department of CSE, IIT Jodhpur
